# anotacoesFATEC

./: README.md
.obsidian/: appearance.json  workspace.json
Primeiro_Semestre/Algoritmos e lógica de programação/: Aula 002.md  Aula 005 - Exercícios.md
Primeiro_Semestre/Algoritmos e lógica de programação/Aula 006 - Exercicios/Exercicios/: CMakeLists.txt  exemploFor.c  exemploFor10.c  exemploFor11.c  exemploFor2.c  exemploFor3.c  exemploFor4.c  exemploFor6.c  exemploFor7.c  exemploFor8.c  exemploFor9.c
Primeiro_Semestre/Engenharia de Software/: Aula 001.md  Aula 004.md  Aula 005.md
Primeiro_Semestre/Projeto Integrador/: Aula 003.md  Aula 006.md
Primeiro_Semestre/Sistemas Operacionais/: Aula 001.md  Aula 004.md
semestre-1/Algoritmos e lógica de programação/: Aula 001.md  Aula 003.md  Aula 005.md  Aula 006.md  Aula 007.md
semestre-1/Algoritmos e lógica de programação/Aula 005 - Exercicios/Exercicios/: CMakeLists.txt  ex02.c  ex03.c  ex04.c  ex05.c  ex06.c  ex07.c  ex08.c  ex09.c  ex10.c  ex11.c  ex12.c  ex13.c  ex14.c  ex15.c  ex16.c  ex17.c  ex18.c  ex19.c  ex20.c
semestre-1/Algoritmos e lógica de programação/Aula 008 - Exercicios/: CMakeLists.txt  ex01.c  ex02.c  ex03.c  ex04.c  ex05.c  ex06.c  ex07.c  ex09.c  ex10.c  ex11.c  ex12.c  ex13.c  ex14.c  ex15.cpp  ex16.c  ex17.c  ex18.c  ex19.c  ex20.c  ex8.c
semestre-1/Arquitetura e Organização/: Aula 008.md  resumoprova.md  semestre-1_resumoprova.md
semestre-1/Comunicação e Expressão/: Semestre-1.md
semestre-1/Engenharia de Software/: Aula 002.md  Aula 003.md  Aula 005.md  Aula 006.md  (+1 more)
(+57 files in other folders)
