cmake_minimum_required(VERSION 4.1)
project(Exercicios C)

set(CMAKE_C_STANDARD 11)

add_executable(Exercicios exemploFor.c
        exemploFor2.c
        exemploFor3.c
        exemploFor4.c
        exemploFor6.c
        exemploFor7.c
        exemploFor8.c
        exemploFor8.c
        exemploFor9.c
        exemploFor10.c
        exemploFor11.c)
