cmake_minimum_required(VERSION 4.1)
project(ex1 C)

set(CMAKE_C_STANDARD 11)

add_executable(ex1 ex01.c
        ex02.c
        ex03.c
        ex04.c
        ex05.c
        ex06.c
        ex07.c
        ex08.c
        ex09.c
        ex10.c
        ex11.c
        ex12.c
        ex13.c
        ex14.c
        ex15.c
        ex16.c
        ex17.c
        ex18.c
        ex19.c
        ex20.c)
